--- a/index.html
+++ b/index.html
@@ -327,8 +327,11 @@
         </div>
     </footer>
 
-    <!-- Scripts avec ordre corrigé (Fix Bug #1 + #2) -->
+    <!-- Scripts avec ordre corrigé - TOUS LES MODULES AVANT SCRIPT.JS -->
     <script src="shared/firebase-manager.js"></script>
+    <script src="shared/cleanup-manager.js"></script>
+    <script src="shared/game-stats.js"></script>
+    <script src="shared/ranking-system.js"></script>
     <script src="shared/auth-utils.js"></script>
     <script src="shared/auth-header.js"></script>
     <script src="mobile/menu.js"></script>
